reduced the font size of the article

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -97,6 +97,10 @@ img {
   width: 700px;
 }
 
+article {
+  font-size: 16px;
+}
+
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
