--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@ nav {
   height:50px;
   margin-top: 0;
   top: 0;
-  width: 100%;
+  width: 97%;
   background-color: white;
   padding: 10px 10px; 
   margin-bottom: 2rem;
@@ -15,6 +15,7 @@ nav {
   text-decoration: none;
   font-weight: bold;
   font-size: 1.2rem;
+  color: black;
 }
 
 .heading_font {
@@ -191,7 +192,6 @@ footer img {
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  
 }
 
 .footer_heading p{
@@ -205,6 +205,7 @@ footer img {
 
 .footer_details a{
   text-decoration: none;
+  color: black;
 }
 
 .footer_details a:hover {
