fix more linters errors

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,12 +2,13 @@ nav {
   position: fixed;
   display: flex;
   justify-content: space-between;
-  height:50px;
+  height: 50px;
   margin-top: 0;
   top: 0;
   width: 97%;
   background-color: white;
   padding: 10px 10px; 
+
   margin-bottom: 2rem;
 }
 
@@ -51,7 +52,7 @@ figure h3 {
   margin-top: 6rem;
 }
 
-img {
+figure img {
   margin: 0 auto;
   height: 500px;
   width: 1000px;
@@ -89,23 +90,23 @@ img {
   float: right;
 }
 
-.editors_picks hr{
-  width:70%;
+.editors_picks hr {
+  width: 70%;
 }
 
 .editor_heading {
   font-weight: bold;
 }
 
-.editors_picks img {
-  width: 100px;
-  height: 100px;
-}
-
 footer img {
   height: 40px;
   width: 200px;
   margin-left: 200px;
+}
+
+.editors_picks img {
+  width: 100px;
+  height: 100px;
 }
 
 .all_articles {
@@ -138,7 +139,7 @@ article {
   margin-right: auto;
 }
 
-.inflation_header h5{
+.inflation_header h5 {
   font-size: 20px;
 }
 
@@ -159,10 +160,10 @@ article {
 }
 
 .image-text {
- display: block;
- width: 100%;
- align-content: center;
- height: 975px;
+  display: block;
+  width: 100%;
+  align-content: center;
+  height: 975px;
 }
 
 .container_cards {
@@ -170,7 +171,7 @@ article {
   margin: 0 auto;
 }
 
-.container_cards p{
+.container_cards p {
 font-weight: bold;
 }
 
@@ -179,7 +180,7 @@ font-weight: bold;
   width: 350px;
 }
 
-.most_popular{
+.most_popular {
   float: right;
 }
 
@@ -187,15 +188,10 @@ font-weight: bold;
   font-size: 15px; 
 }
 
-footer img {
-  height:40px;
-  width:200px;
-  margin-left: 200px;
-}
-
 .footer_details {
   width: 70%;
-  margin: 0 auto;
+  margin: 0 auto; 
+  
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
@@ -209,9 +205,15 @@ footer img {
   width: 70%;
 }
 
-.footer_details a{
+.footer_details a {
   text-decoration: none;
   color: black;
+}
+
+.sixth_footer a {
+  text-decoration: none;  
+  color: black;
+  font-size: 10px;
 }
 
 .footer_details a:hover {
@@ -221,12 +223,6 @@ footer img {
 
 .detail_header {
   font-weight: bold;
-}
-
-.sixth_footer a {
-  text-decoration: none;  
-  color: black;
-  font-size: 10px;
 }
 
 .sixth_footer p {
@@ -245,6 +241,6 @@ footer img {
   bottom: 0;
   background-color: white;
   border-top: 1px solid black;
+
   text-align: center;
 }
-
