--- a/stylesheet.css
+++ b/stylesheet.css
@@ -157,6 +157,8 @@ article {
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+  gap: 20px 20px;
 }
 
 .image-text {
